--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),<%image_tag "banner.jpg"%> ;">
+  <div class="container">
+    <h1>Rent an instrument and live your creativity</h1>
+    <p>Change your life and rent an amazing instrument in your city</p>
+    <a class="btn btn-primary" href="#">Sign in</a>
+    <a class="btn btn-success" href="#">All instruments</a>
+  </div>
+</div>
+
