pics tommorrow probably

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),<%image_tag "banner.jpg"%> ;">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),<%=image_tag "banner.jpg"%> ;">
   <div class="container">
     <h1>Rent an instrument and live your creativity</h1>
     <p>Change your life and rent an amazing instrument in your city</p>
