--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <title>RentAnInstrument</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <%= link_to "#", class: "navbar-brand" do %>
+    <i class="fas fa-guitar"></i>
+    <% end %>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+
+        <li class="nav-item">
+          <%= link_to "Login", class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Sign Up", class: "nav-link" %>
+        </li>
+    </ul>
+  </div>
+</div>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
