put the navbar in the body and tried image again

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),<%=image_tag "banner.jpg"%> ;">
-  <div class="container">
+<div class="banner" style="background-image: url('<%= image_path 'https://unsplash.com/photos/gUK3lA3K7Yo' %>');">
     <h1>Rent an instrument and live your creativity</h1>
     <p>Change your life and rent an amazing instrument in your city</p>
     <a class="btn btn-primary" href="#">Sign in</a>
@@ -7,3 +6,4 @@
   </div>
 </div>
 
+<img src="" alt="">
