--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,7 +2,7 @@
   background-size: cover;
   background-position: center;
   padding: 150px 0;
-  background-image: asset-url('banner.png');;
+  background-image: url('https://unsplash.com/photos/gUK3lA3K7Yo');
 }
 
 .banner h1 {
