added background image

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,6 @@
-<div class="banner" style="background-image: url('<%= image_path 'https://unsplash.com/photos/gUK3lA3K7Yo' %>');">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= image_path 'banner.jpg' %>');">>
     <h1>Rent an instrument and live your creativity</h1>
     <p>Change your life and rent an amazing instrument in your city</p>
-    <a class="btn btn-primary" href="#">Sign in</a>
-    <a class="btn btn-success" href="#">All instruments</a>
+    <a class="btn btn-success" href="#">All instrumnets</a>
   </div>
 </div>
-
-<img src="" alt="">
