homepage updated - still working on some issues

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,33 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= image_path 'banner.jpg' %>');">>
+    <div class="container">
     <h1>Rent an instrument and live your creativity</h1>
     <p>Change your life and rent an amazing instrument in your city</p>
     <a class="btn btn-success" href="#">All instrumnets</a>
+    </div>
   </div>
 </div>
+
+<div class="container">
+    <h2 class="text-center">How it works</h2>
+    <div class="cards">
+
+      <div class="card">
+        <%= image_tag'apply.svg', class: 'img' %>
+        <h4>Apply</h4>
+        <p>First apply to one of our campuses around the world.</p>
+      </div>
+
+      <div class="card">
+        <%= image_tag'learn.svg', class: 'img' %>
+        <h4>Learn to code</h4>
+        <p>Learn Ruby on Rails, Javascript, SQL & much more!</p>
+      </div>
+
+      <div class="card">
+        <%= image_tag'product.svg', class: 'img' %>
+        <h4>Build products</h4>
+        <p>Finally you will be able to bring your ideas to life.</p>
+      </div>
+
+    </div>
+  </div>
