fixed navbar to the top

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
     <h1>Rent an instrument and live your creativity</h1>
     <p>Change your life and rent an amazing instrument in your city</p>
-    <a class="btn btn-success" href="#">All instrumnets</a>
+    <a class="btn btn-success" href="#">All instruments</a>
     </div>
   </div>
 </div>
