--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <title>RentAnInstrument</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -15,7 +15,7 @@
 
   <body>
     <!-- From device installation -->
-    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
     <%= link_to "#", class: "navbar-brand" do %>
     <i class="fas fa-guitar"></i>
     <% end %>
