--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
     <h1>Rent an instrument and live your creativity</h1>
     <p>Change your life and rent an amazing instrument in your city</p>
-    <a class="button-green" href="#">All instruments</a>
+    <%= link_to "All Instruments", instruments_path, class: "button-green" %>
   </div>
 </div>
 
