--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= image_path 'banner.jpg' %>');">>
     <div class="container">
-    <h1>Rent an instrument and live your creativity</h1>
-    <p>Change your life and rent an amazing instrument in your city</p>
+    <h1>Rent an Instrument with Soul</h1>
+    <p>Unique instruments in your city</p>
     <%= link_to "All instruments", instruments_path, class: "button-green" %>
   </div>
 </div>
