tried some banner stuff

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 
   <body>
     <!-- From device installation -->
+    <div class="navbar-transparent">
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
     <%= link_to "#", class: "navbar-brand" do %>
     <i class="fas fa-guitar"></i>
@@ -36,6 +37,7 @@
         </li>
     </ul>
   </div>
+</div>
 </div>
 
     <p class="notice"><%= notice %></p>
