--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Instruments</h1>
 <ul>
-  <%= @instruments.each do |instrument| %>
-  <li> <%= instrument.name%></li>
+  <% @instruments.each do |instrument| %>
+  <li> <%= instrument.name%> <img src=instrument.photo></li>
   <% end %>
 </ul>
