--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,26 +7,105 @@
 </div>
 
 <div class="container">
+  <div class="element-container">
     <h2 class="text-center">How it works</h2>
     <div class="cards">
 
       <div class="card">
         <%= image_tag'apply.svg', class: 'img' %>
-        <h4>Apply</h4>
-        <p>First apply to one of our campuses around the world.</p>
+        <h4>Book it</h4>
+        <p>Find the nearest clarinet next to you.</p>
       </div>
 
       <div class="card">
         <%= image_tag'learn.svg', class: 'img' %>
-        <h4>Learn to code</h4>
+        <h4>Play it like you mean it</h4>
         <p>Learn Ruby on Rails, Javascript, SQL & much more!</p>
       </div>
 
       <div class="card">
         <%= image_tag'product.svg', class: 'img' %>
+        <h4>Return it</h4>
+        <p>No strings attached.</p>
+        <p>Unless it was a guitar</p>
+      </div>
+    </div>
+  </div>
+
+        <!-- SLIDER -->
+  <div class="element-container">
+  <h2 class="text-center">Most popular near you</h2>
+<div class="slider" id="slider">
+  <div class="slide" id="slide">
+    <div class="item">
+      <div class="card">
+        <img src="https://source.unsplash.com/collection/415470/1600x900?sig=123">
+        <h4>Apply</h4>
+        <p>First apply to one of our campuses around the world.</p>
+      </div>
+    </div>
+     <div class="item">
+      <div class="card">
+        <img src="https://source.unsplash.com/collection/415470/1600x900?sig=1">
+        <h4>Learn to code</h4>
+        <p>Learn Ruby on Rails, Javascript, SQL & much more!</p>
+      </div>
+    </div>
+     <div class="item">
+      <div class="card">
+        <img src="https://source.unsplash.com/collection/415470/1600x900?sig=200">
         <h4>Build products</h4>
         <p>Finally you will be able to bring your ideas to life.</p>
       </div>
-
+    </div>
+    <div class="item">
+      <div class="card">
+        <img src="https://source.unsplash.com/collection/415470/1600x900?sig=12">
+        <h4>Apply</h4>
+        <p>First apply to one of our campuses around the world.</p>
+      </div>
+    </div>
+     <div class="item">
+      <div class="card">
+        <img src="https://source.unsplash.com/collection/415470/1600x900?sig=220">
+        <h4>Learn to code</h4>
+        <p>Learn Ruby on Rails, Javascript, SQL & much more!</p>
+      </div>
+    </div>
+    <div class="item">
+      <div class="card">
+        <img src="https://source.unsplash.com/collection/415470/1600x900?sig=100">
+        <h4>Build products</h4>
+        <p>Finally you will be able to bring your ideas to life.</p>
+      </div>
+    </div>
+    <div class="item">
+      <div class="card">
+        <img src="https://source.unsplash.com/collection/415470/1600x900?sig=90">
+        <h4>Apply</h4>
+        <p>First apply to one of our campuses around the world.</p>
+      </div>
+    </div>
+     <div class="item">
+      <div class="card">
+        <img src="https://source.unsplash.com/collection/415470/1600x900?sig=20">
+        <h4>Learn to code</h4>
+        <p>Learn Ruby on Rails, Javascript, SQL & much more!</p>
+      </div>
+    </div>
+    <div class="item">
+      <div class="card">
+        <img src="https://source.unsplash.com/collection/415470/1600x900?sig=10">
+        <h4>Build products</h4>
+        <p>Finally you will be able to bring your ideas to life.</p>
+      </div>
     </div>
   </div>
+  <button class="ctrl-btn pro-prev">Prev</button>
+  <button class="ctrl-btn pro-next">Next</button>
+</div>
+<a class="button-white" href="#">view all</a>
+</div>
+</div>
+
+
