--- a/app/assets/stylesheets/components/_button-green.scss
+++ b/app/assets/stylesheets/components/_button-green.scss
@@ -12,3 +12,19 @@
   text-decoration: none;
 }
 
+.button-white {
+  color: grey;
+  border: 1px solid rgb(230,230,230);
+  padding: 8px 24px;
+  border-radius: 50px;
+  background: white;
+  transition: background 0.3s ease;
+}
+
+.button-white:hover {
+  background: #bad3d0;
+  color: white;
+  text-decoration: none;
+  box-shadow: 0 0 5px rgb(230,230,230);
+}
+
