--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,12 @@
 .navbar-lewagon {
   justify-content: space-between;
+  background-color: transparent;
+  transition: 0.5s background-color ease;
   background: #BAD3D0;
+}
+
+.navbar-lewagon-white {
+  background-color: #BAD3D0;
 }
 
 .navbar-lewagon .navbar-collapse {
