--- a/app/assets/stylesheets/components/_button-green.scss
+++ b/app/assets/stylesheets/components/_button-green.scss
@@ -4,6 +4,7 @@
   border-radius: 50px;
   background: $maroon;
   transition: background 0.3s ease;
+  text-align: center;
 }
 
 .button-green:hover {
