--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
-
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "#", class: "navbar-brand" do %>
-    <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" class: "logo" %>
+    <div class="navbar-transparent">
+    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
+    <%= link_to "#", class: "navbar-brand" do %>
+    <i class="fas fa-guitar"></i>
     <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,6 +16,10 @@
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
         </li>
 
+        <li class="nav-item">
+          <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+        </li>
     </ul>
   </div>
+</div>
 </div>
