--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,30 +16,7 @@
 
   <body>
     <!-- From device installation -->
-    <div class="navbar-transparent">
-    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
-    <%= link_to "#", class: "navbar-brand" do %>
-    <i class="fas fa-guitar"></i>
-    <% end %>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-
-        <li class="nav-item">
-          <%= link_to "Login", class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Sign Up", class: "nav-link" %>
-        </li>
-    </ul>
-  </div>
-</div>
-</div>
+    <%= render "shared/navbar" %>
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
