--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -29,3 +29,14 @@
   margin-bottom: 30px;
 }
 
+.card_instrument_index {
+  width: 280px;
+  background-color: white;
+  border-radius: 3px;
+  box-shadow: 0 0 5px rgb(230,230,230);
+  text-align: center;
+  padding: 16px;
+  border: 1px solid rgb(230,230,230);
+  margin: 20px;
+}
+
