--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
     <div class="navbar-transparent">
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to root_path, class: "navbar-brand" do %>
     <i class="fas fa-guitar"></i>
     <% end %>
 
