--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Instruments</h1>
+<%= link_to "New Instrument", new_instrument_path, class: "button-green" %>
 <ul>
   <% @instruments.each do |instrument| %>
   <li> <%= instrument.name%> <%= image_tag instrument.photo %></li>
