--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,6 +2,7 @@
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
     <%= link_to "#", class: "navbar-brand" do %>
     <i class="fas fa-guitar"></i>
+      <%= link_to "Rentstrument", root_path, class: "nav-link" %>
     <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
