--- a/app/views/instruments/show.html.erb
+++ b/app/views/instruments/show.html.erb
@@ -1,6 +1,6 @@
 <h1> <%= @instrument.name %></h1>
 
-<%= cl_image_tag @instrument.photo %>
+<%= image_tag @instrument.photo %>
 
 <h5>Category:</h5>
 <p> <%= @instrument.category %></p>
