link now working

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,7 @@
-    <div class="navbar-transparent">
+    <div>
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to instruments_path, class: "navbar-brand" do %>
     <i class="fas fa-guitar"></i>
-      <%= link_to "Rentstrument", root_path, class: "nav-link" %>
     <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
