some small changes

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,14 @@
 // Specific CSS for your home-page
 
+h1 {
+  font-size: 48px;
+}
 
+.ctrl-btn {
+  background-color: $bisque;
+}
+
+.ctrl-btn:hover {
+  background-color: #e2d3c4;
+}
 
