--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/navbar" %>
 <div class="container">
   <h2 class="text-center">Instruments</h2>
   <%= link_to "New Instrument", new_instrument_path, class: "button-green" %>
@@ -10,4 +11,5 @@
     </div>
   </div>
 </div>
+<%= render "shared/footer" %>
 
