--- a/app/assets/stylesheets/components/footer-fixed.scss
+++ b/app/assets/stylesheets/components/footer-fixed.scss
@@ -1,10 +1,14 @@
-.footer {
+.footer-fixed {
   background: $bisque;
   align-items: center;
   justify-content: space-between;
   height: 60px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer-links {
