--- a/app/views/instruments/new.html.erb
+++ b/app/views/instruments/new.html.erb
@@ -8,10 +8,9 @@
     <%= f.input :category %>
     <%= f.input :price_per_day %>
     <%= f.input :photo, as: :file %>
-  </div>
-  <div class="form-actions">
     <%= f.button :submit, class: 'button-green' %>
-  </div>
 <% end %>
  <%= link_to "Back", instruments_path, class: "button-white" %>
 </div>
+
+<%= render "shared/footer-fixed" %>
