--- a/app/views/instruments/show.html.erb
+++ b/app/views/instruments/show.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/navbar" %>
 <h1> <%= @instrument.name %></h1>
 
 <%= image_tag @instrument.photo %>
@@ -14,3 +15,4 @@
 
 <h2> <%= link_to "Book now" %></h2>
 <h2> <%= link_to "Go Back", instruments_path %></h2>
+<%= render "shared/footer" %>
