--- a/app/views/instruments/show.html.erb
+++ b/app/views/instruments/show.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/navbar" %>
 <h1> <%= @instrument.name %></h1>
 
-<%= image_tag @instrument.photo %>
+<%= cl_image_tag @instrument.photo.key %>
 
 <h5>Category:</h5>
 <p> <%= @instrument.category %></p>
