still some issues...

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,10 @@
 
   <body>
     <!-- From device installation -->
-
+  <div class="wrapper">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
-  
+  </div>
   </body>
 </html>
