cards now in center and navbar red

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: $bisque;
+  background: $maroon;
   align-items: center;
   justify-content: space-between;
   height: 60px;
@@ -14,7 +14,7 @@
   text-align: center;
 }
 .footer-links a {
-  color: $tyrian;
+  color: $bisque;
   opacity: 0.16;
   text-decoration: none;
   font-size: 24px;
