--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -42,6 +42,10 @@
   object-fit: cover;
 }
 
+.card-instrument h3 {
+  font-size: 16px;
+  margin: 0;
+}
 .card-instrument h2 {
   font-size: 16px;
   font-weight: bold;
@@ -57,7 +61,6 @@
   margin: 0;
 }
 
-
 .card-instrument .card-instrument-infos {
   padding: 16px;
   display: flex;
@@ -65,3 +68,7 @@
   align-items: flex-end;
   position: relative;
 }
+.card-instrument .card-instrument-infos .card-instrument-pricing {
+  align-items: flex-end;
+}
+
