--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,5 +1,10 @@
 <%= render "shared/navbar" %>
 <div class="container">
+<!-- <div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div> -->
+
   <h2 class="text-center">Instruments</h2>
   <%= link_to "New Instrument", new_instrument_path, class: "button-green" %>
     <div class= "d-flex">
