--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,6 +9,7 @@ $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
 $blash: #da627d;
-$maroon: #632038;
+$maroon: #A53860;
 $bisque: #f7f0e9;
 $tyrian: #2b0110;
+
