--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
   <body>
     <!-- From device installation -->
   <div class="wrapper">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%= render "shared/navbar" %>
+    <%= render 'shared/flashes' %>
     <%= yield %>
   </div>
   </body>
