--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -76,8 +76,8 @@
       </div>
     </div>
   </div>
-  <button class="ctrl-btn pro-prev">Prev</button>
-  <button class="ctrl-btn pro-next">Next</button>
+  <button class="ctrl-btn pro-prev"><</button>
+  <button class="ctrl-btn pro-next">></button>
 </div>
 <%= link_to "All instruments", instruments_path, class: "button-green" %>
 </div>
