--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -18,5 +18,6 @@
     <%= link_to "Add new Instrument", new_instrument_path, class: "button-green" %>
   </div>
 </div>
+<%= link_to "Test Dashboard", user_dashboards_path(current_user) %>
 <%= render "shared/footer" %>
 
