--- a/app/views/instruments/new.html.erb
+++ b/app/views/instruments/new.html.erb
@@ -13,4 +13,4 @@
  <%= link_to "Back", instruments_path, class: "button-white" %>
 </div>
 
-<%= render "shared/footer-fixed" %>
+<%= render "shared/footer" %>
