--- a/app/views/instruments/show.html.erb
+++ b/app/views/instruments/show.html.erb
@@ -1,4 +1,3 @@
-<%= render "shared/navbar" %>
 <div class="container">
   <div class="main-container">
     <div class="instrument-show">
@@ -9,7 +8,12 @@
       <p> <%= @instrument.description%> </p>
       <h2>for only <strong> <%= @instrument.price_per_day %> €</strong>/day!</h2>
     </div> 
-    <img id="map" src='https://raw.githubusercontent.com/lewagon/layouts-demo/gh-pages/images/mapbox.png'>
+
+    <div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
   </div>
 <div class="calender">
   <%= simple_form_for ([@instrument, @booking]) do |f| %>
