--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -2,11 +2,8 @@
 <div id="map"
      style="width: 100%; height: 600px;"
      data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
-
-  <h2 class="text-center">Instruments</h2>
-  <%= link_to "New Instrument", new_instrument_path, class: "button-green" %>
-    <div class= "d-flex">
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
 
 <div class="row justify-content-center">
   <h2>Instruments</h2>
