--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,10 @@
 
   <body>
     <!-- From device installation -->
+  <div class="wrapper">
     <%= render "shared/navbar" %>
     <%= render 'shared/flashes' %>
     <%= yield %>
+  </div>
   </body>
 </html>
