--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,6 +20,9 @@
         </li>
       <% else %>
         <li class="nav-item">
+          <%= link_to "Add Instrument", new_instrument_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
           <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
         </li>
 
