--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -2,12 +2,16 @@
   background-color: white;
   border-radius: 8px;
   padding: 32px;
-  margin: 32px;
+  margin: auto;
   border: 1px solid rgb(230,230,230);
+  width: 900px;
+  align-items: center;
 }
 
 .card img {
-  width: 150px;
+  height: 150px;
+  width: 100%;
+  object-fit: cover;
 }
 
 .card p {
@@ -21,6 +25,8 @@
   text-align: center;
   padding: 16px;
   border: 1px solid rgb(230,230,230);
+  margin-bottom: 60px;
+  height: 290px;
 }
 
 .cards {
