--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -40,19 +40,23 @@
 }
 
 .ctrl-btn {
-  padding: 20px 20px;
-  min-width: 50px;
-  background: #BAD3D0;
-  border: none;
-  font-weight: 600;
-  text-align: center;
-  cursor: pointer;
-  border: 1px solid rgb(230,230,230);
-
+  height: 40px;
+      border: 0;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 0.15em;
+      border-radius: 0;
+      color: white;
+      flex: 1;
+      font-size: 12px;
+      margin: 0;
+      outline: 0;
+      padding: 12px;
   position: absolute;
   top: 50%;
   margin-top: -27.5px;
 }
+
 
 .ctrl-btn.pro-prev {
   left: 0;
