--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
     <h1>Rent an Instrument with Soul</h1>
     <p>Unique instruments in your city</p>
-    <%= link_to "All instruments", instruments_path, class: "button-green" %>
+    <%= link_to "Browse all instruments", instruments_path, class: "button-green" %>
   </div>
 </div>
 
