--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,25 +1,20 @@
-<div class="container">
-<div id="map"
-     style="width: 100%; height: 600px;"
-     data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-</div>
+<div class="content">
 
 <div class="row justify-content-center">
-  <h2>Instruments</h2>
+  <h2>Browse instruments near you</h2>
     <div class= "cards-index ">
 
       <% @instruments.each do |instrument| %>
-        <div class="card-instrument">
+        <div class="card-product">
           <% if instrument.photo.attached? %>
             <%= cl_image_tag instrument.photo.key %>
           <% end %>
-        <div class="card-instrument-infos">
+        <div class="card-product-infos">
           <div>
             <h2><%= link_to instrument.name, instrument_path(instrument) %></h2>
             <p><%= instrument.category %></p>
           </div>
-          <div class="card-instrument-pricing">
+          <div class="card-product-pricing">
             <h2><%= instrument.price_per_day %>€</h2>
           </div>
         </div>
@@ -28,7 +23,13 @@
     </div>
     <%= link_to "Add new Instrument", new_instrument_path, class: "button-green" %>
   </div>
+<!--   <div class="map-container"> -->
+  <div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
-</div>
+<!-- </div> -->
+  </div>
 <%= render "shared/footer" %>
 
