--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,7 @@
  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
     <%= link_to root_path, class: "navbar-brand" do %>
-    <i class="fas fa-guitar"></i>
+    <h1> Rentsrument</h1>
     <% end %>
-
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
