--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,7 +8,7 @@
 // #rentstrument{
 //   font-family: 'Pacifico', cursive;
 // }
-
+//
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
@@ -42,5 +42,5 @@
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: $bisque;
+  color: white;
 }
