--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,12 @@
 
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= image_path 'banner.jpg' %>');">>
-    <div class="container">
+
+   <div class="container">
     <h1>Rent an Instrument with Soul</h1>
     <p>Unique instruments in your city</p>
     <%= link_to "Browse all instruments", instruments_path, class: "button-green" %>
   </div>
-
+</div>
           <!-- SLIDER -->
     <div class="element-container">
     <h2 class="text-center">Most popular near you</h2>
