cards are ok, but carusell broke

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,14 +22,14 @@
       <div class="item">
         <div class="card">
           <%= image_tag 'piano.jpg' %>
-          <h4>Blüther piano Leipzig</h4>
+          <h4>Blüther piano </h4>
           <p>The warm sound you are searching for</p>
         </div>
       </div>
       <div class="item">
         <div class="card">
           <%= image_tag 'drums.jpg' %>
-          <h4>Pearl drumset 405</h4>
+          <h4>Pearl drumset</h4>
           <p>This drums will never let you down</p>
         </div>
       </div>
@@ -43,7 +43,7 @@
       <div class="item">
         <div class="card">
           <%= image_tag 'violin2.jpg' %>
-          <h4>Violin for beginners</h4>
+          <h4>Violin beginners</h4>
           <p>Check out this new violin</p>
         </div>
       </div>
@@ -57,7 +57,7 @@
       <div class="item">
         <div class="card">
           <%= image_tag 'piano2.jpg' %>
-          <h4>Steinway D-Flügel</h4>
+          <h4>Steinway D</h4>
           <p>The new steinway for your home</p>
         </div>
       </div>
