--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -14,8 +14,13 @@
   object-fit: cover;
 }
 
+.card h4 {
+  font-size: 18px;
+}
+
 .card p {
-  opacity: .5;
+  opacity: .7;
+  font-size: 11px;
 }
 
 .card {
@@ -26,6 +31,7 @@
   border: 1px solid rgb(230,230,230);
   margin-bottom: 60px;
   height: 290px;
+  width: 140px;
 }
 
 .cards {
