centered dashboard content

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/navbar" %>
-
+<div style="text-align:center">
 <h2>My instruments</h2>
   <% @instruments.each do |instrument| %>
     <p> <%= instrument.name %> </p>
@@ -8,8 +8,8 @@
 <h2>My bookings</h2>
 
 <% @bookings.each do |booking| %>
-  <p><%= booking.id %> <%= booking.instrument.name %> </p>
-  <ul>
+  <p>Booking no. <%= booking.id %> <%= booking.instrument.name %> </p>
+  <ul style="list-style-type:none">
     <li> Start date: <%= booking.start_date %></li>
     <li> End date: <%= booking.end_date %></li>
     <li> Total price: <%= booking.total_price %></li>
@@ -19,7 +19,7 @@
 <h2>Pending incoming bookings</h2>
 <% @pending_incoming_bookings.each do |pending_incoming_booking| %>
   <p><%= pending_incoming_booking.id %> <%= pending_incoming_booking.instrument.name %> </p>
-  <ul>
+  <ul style="list-style-type:none">
     <li> Start date: <%= pending_incoming_booking.start_date %></li>
     <li> End date: <%= pending_incoming_booking.end_date %></li>
     <li> Total price: <%= pending_incoming_booking.total_price %></li>
@@ -33,7 +33,7 @@
 <h2>My incoming bookings</h2>
 <% @incoming_bookings.each do |incoming_booking| %>
   <p><%= incoming_booking.id %> <%= incoming_booking.instrument.name %> </p>
-  <ul>
+  <ul style="list-style-type:none">
      <li> Start date: <%= incoming_booking.start_date %></li>
     <li> End date: <%= incoming_booking.end_date %></li>
     <li> Total income: <%= incoming_booking.total_price %></li>
@@ -41,5 +41,5 @@
 <% end %>
 
 <p> <%= link_to "Home", root_path %> <%= link_to "Browse all instruments", instruments_path %></p>
-
+</div>
 <%= render "shared/footer" %>
