--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -62,6 +62,27 @@
         </div>
       </div>
     </div>
+    <div class="item">
+        <div class="card">
+          <%= image_tag 'flute.jpg' %>
+          <h4>Moenck flute</h4>
+          <p>best instrument in the world</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="card">
+          <%= image_tag 'oboe.jpg' %>
+          <h4>L'orea hautbois</h4>
+          <p>Play music like the french</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="card">
+          <%= image_tag 'piano3.jpg' %>
+          <h4>Bösendorfer</h4>
+          <p>You know we are the best</p>
+        </div>
+      </div>
     <button class="ctrl-btn pro-prev"><</button>
     <button class="ctrl-btn pro-next">></button>
   </div>
